se agrega segundo props al hijo para mejorar manejo del cart

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <a class="navbar-brand" href="#">hola0048</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" style="color: #ffffff;" href="#">Carrito: <b>{{ cart }}</b></a>
+                    <a class="nav-link" style="color: #ffffff;" href="#">Carrito: <b>{{ cart.length }}</b></a>
                 </li>
             </ul>
         </nav>
         <div class="container pt-4">
-            <product :premium='premium' @add-to-cart="addToCart" @remove-from-cart="removeFromCart"></product>
+            <product :cart='cart' :premium='premium' @add-to-cart="addToCart" @remove-from-cart="removeFromCart"></product>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
