--- a/index.html
+++ b/index.html
@@ -14,12 +14,32 @@
             <a class="navbar-brand" href="#">hola0048</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" style="color: #ffffff;" href="#">Carrito: <b>{{ cart.length }}</b></a>
+                    <a class="nav-link" @click="displayCart = true" style="color: #ffffff;" href="#">Carrito: <b>{{ cart.length }}</b></a>
                 </li>
             </ul>
         </nav>
         <div class="container pt-4">
             <product :cart='cart' :premium='premium' @add-to-cart="addToCart" @remove-from-cart="removeFromCart"></product>
+        </div>
+
+        <div class="modal" tabindex="-1" :class="{show: displayCart}" :style="modalStyle">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" @click="displayCart = false" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Modal body text goes here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" @click="displayCart = false">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
