--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 <body>
     <div id='app'>
         <nav class="navbar navbar-light bg-danger">
-            <a class="navbar-brand" href="#">hola0048</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" style="color: white;" @click="displayCart = true" href="#">Carrito: <b>{{ cart.length }}</b></a>
-                </li>
-            </ul>
+            <div class="container">
+                <a class="navbar-brand" href="#">hola0048</a>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" style="color: white;" @click="displayCart = true" href="#">Carrito: <b>{{ cart.length }}</b></a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <div class="container pt-4">
             <product :cart='cart' :premium='premium' @add-to-cart="addToCart" @remove-from-cart="removeFromCart"></product>
         </div>
-
         <div class="modal" tabindex="-1" :class="{show: displayCart}" :style="modalStyle">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -37,7 +38,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-warning" @click="cart=[]">Vaciar carrito</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-primary">Pagar</button>
                     </div>
                 </div>
             </div>
@@ -67,7 +68,7 @@
                 </ul>
                 <a :href="lnk"> Ver Detalle</a>
                 <p>Costo de Envío: {{shipping}}</p>
-                <div class="input-group mb-3">
+                <div class="input-group mb-5">
                     <div class="input-group-prepend">
                         <label class="input-group-text" for="inputGroupSelect01">Tipo</label>
                     </div>
@@ -77,7 +78,59 @@
                 </div>
                 <button class="btn btn-danger" @click='addToCart' :disabled='!inStock'>Agregar al carro</button>
                 <button class="btn btn-secondary" @click='deleteFromCart'>Sacar del carro</button>
+                <product-tabs></product-tabs>
+
             </div>
+        </div>
+    </script>
+    <script type="text/x-template" id="tabs-template">
+        <div>
+            <ul class="nav nav-tabs mt-5">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+            <reviews-form></reviews-form>
+        </div>
+    </script>
+    <script type="text/x-template" id="form-template">
+        <div>
+            <div v-if="errors.length" class="alert alert-warning alert-dismissible">
+                <b>Corrige los Siguientes errores para continuar:</b>
+                <ul>
+                    <li v-for="error in errors">{{error}}</li>
+                </ul>
+                <button type="button" @click="errors = []" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <form @submit.prevent="saveReview">
+                <div class="form-group mt-5">
+                    <label for="exampleInputEmail1">Email</label>
+                    <input v-model="email" type="email" class="form-control" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Dejanos tu opinión</label>
+                    <textarea v-model="review" class="form-control" rows="3"></textarea>
+                </div>
+
+                <select v-model.number="rating" class="custom-select" size="6" required>
+          <option selected>Calificación</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+                <button type="submit" class="mt-4 btn btn-warning">Agregar</button>
+            </form>
         </div>
     </script>
     <script src="main.js"></script>
