--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id='app'>
         <nav class="navbar navbar-light bg-danger">
             <div class="container">
-                <a class="navbar-brand" href="#">hola0048</a>
+                <a class="navbar-brand" href="#">hola a todo el mundo</a>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" style="color: white;" @click="displayCart = true" href="#">Carrito: <b>{{ cart.length }}</b></a>
@@ -48,7 +48,7 @@
 
     <script type="text/x-template" id="detail-template">
         <div>
-            <h4>Características:</h4>
+            <h5 class="mt-4">Detalles del producto:</h5>
             <ul>
                 <li v-for='(detail,index) in details' :key="index">{{detail}}</li>
             </ul>
@@ -114,8 +114,8 @@
 
     <script type="text/x-template" id="form-template">
         <div>
-            <div v-if="errors.length" class="alert alert-warning alert-dismissible">
-                <b>Corrige los Siguientes errores para continuar:</b>
+            <div v-if="errors.length" class="alert alert-warning alert-dismissible mt-3">
+                <b>Corrige el siguiente error para continuar:</b>
                 <ul>
                     <li v-for="error in errors">{{error}}</li>
                 </ul>
@@ -124,7 +124,7 @@
               </button>
             </div>
             <form @submit.prevent="saveReview">
-                <div class="form-group mt-5">
+                <div class="form-group mt-3">
                     <label for="exampleInputEmail1">Email</label>
                     <input v-model="email" type="email" class="form-control" required>
                 </div>
